<resources>
    <string name="app_name">Filmoteca</string>
    <string name="sitioweb_btn">Ir al sitio web</string>
    <string name="soporte_btn">Obtener soporte</string>
    <string name="volver_btn">Volver</string>
    <string name="creado_por">Creada por Juan García Martínez</string>
    <string name="creado_por_compose">Creada por Juan García Martínez con Compose</string>
    <string name="func_no_imp">Funcionalidad sin implementar</string>
    <string name="ver_peli">Ver película %1$s </string>
    <string name="acerca_de">Acerca de</string>
    <string name="list_peli_label">Lista de películas</string>
    <string name="datos_peli_label">Regreso al futuro</string>
    <string name="relac_peli_btn">Ver en IMDB</string>
    <string name="edit_peli_btn">Editar película</string>
    <string name="volver_peli">Volver a la principal</string>
    <string name="edit_peli_label">Editando película</string>
    <string name="guardar_btn">Guardar</string>
    <string name="cancelar_btn">Cancelar</string>
    <string name="film_edited_success_msg">Película editada correctamente</string>
    <string name="film_edit_cancel_msg">Edición de película cancelada</string>
    <string name="con_compose">con Compose</string>
    <string name="con_layouts">con Layouts</string>
    <string name="lanzar_modo_app">Iniciar Filmoteca "</string>
    <string name="director_label">Director</string>
    <string name="anyo_label">Año</string>
    <string name="nota_peli_label">Versión extendida</string>
    <string name="capturar_foto">Capturar fotografia</string>
    <string name="seleccionar_img">Selecciona imagen</string>
    <string name="titulo_peli">Título de la película</string>
    <string name="nombre_director">Nombre del director</string>
    <string name="anyo_peli">Año</string>
    <string name="enlace_imdb">Enlace a IMDb</string>
    <string name="comentarios">Comentarios</string>
    <string name="genero_peli">Selecciona el género</string>
    <string name="formato_peli">Selecciona el formato</string>
    <string name="cartel_pelicula">Cartel de la película</string>
    <string name="accion_gen">Acción</string>
    <string name="comedia_gen">Comedia</string>
    <string name="drama_gen">Drama</string>
    <string name="scifi_gen">Ciencia Ficción</string>
    <string name="terror_gen">Terror</string>
</resources>