<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmEditActivity">

    <LinearLayout
        android:layout_width="416dp"
        android:layout_height="673dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_android" />

            <Button
                android:id="@+id/button_take_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/capturar_foto"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/button_select_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/seleccionar_img"
                android:textAllCaps="true" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/titulo_peli"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_movie_director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/nombre_director"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_movie_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/anyo_peli"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinner_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/generos_peli"
            android:prompt="@string/genero_peli" />

        <Spinner
            android:id="@+id/spinner_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:entries="@array/formato_peli"
            android:prompt="@string/formato_peli" />

        <EditText
            android:id="@+id/edit_movie_imdb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enlace_imdb"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/edit_movie_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/comentarios"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelarEditBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar_btn" />

            <Button
                android:id="@+id/guardarEditBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/guardar_btn" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
