<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/about_creator_picture"
        android:layout_width="210dp"
        android:layout_height="320dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/sitioweb_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/about_creator_picture" />

    <Button
        android:id="@+id/soporte_btn"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:text="@string/soporte_btn"
        app:layout_constraintBottom_toTopOf="@+id/volver_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sitioweb_btn"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sitioweb_btn"
        app:layout_constraintBottom_toTopOf="@+id/soporte_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/volver_btn"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginBottom="96dp"
        android:text="@string/volver_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_filmoteca" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creado_por"
        app:layout_constraintBottom_toTopOf="@+id/about_creator_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

</androidx.constraintlayout.widget.ConstraintLayout>
